--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-  </body>
+    <button id="click">click me</button>
+<button id="menu">Menu</button>
+<button id="msg_a">message a</button>
 
+<webview src="http://www.baidu.com"></webview>
+<a href="http://www.baidu.com">baidu</a>     
   <script>
     // You can also require other files to run in this process
-    require('./renderer.js')
+    // require('./renderer-process/renderer.js');
+    // require('./renderer-process/menu.js');
+    // require('./renderer-process/msg-a.js');
+    // require('./renderer-process/notification.js');
+    require('./renderer-process/link.js');
+
+    require('./renderer-process/clipboard.js');
   </script>
 </html>
